--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "aws_dynamo_import"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 boto3 = "^1.28.2"
+tqdm = "^4.65.0"
 
 
 [build-system]
